fix: Changed style

--- a/public/index.html
+++ b/public/index.html
@@ -23,3 +23,8 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+<style>
+  body {
+    background-color: #00ced1;
+  }
+</style>
